--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,14 @@ pnpm-debug.log*
 # Claude Code
 .claude/
 CLAUDE.md
+
+# Auto Claude data directory
+.auto-claude/
+
+# Auto Claude generated files
+.auto-claude-security.json
+.auto-claude-status
+.claude_settings.json
+.worktrees/
+.security-key
+logs/security/
